objects/Retention__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Retentions</relationshipLabel>
        <relationshipName>Retentions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Up_AP_Lines__c</fullName>
        <inlineHelpText>The total amount of all related AP Lines.</inlineHelpText>
        <label>Roll Up AP Lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Billing_Lines__c</fullName>
        <inlineHelpText>The total amount of all related Billing Lines.</inlineHelpText>
        <label>Roll Up Billing Lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retentions</relationshipLabel>
        <relationshipName>Retentions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Retention</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Vendor_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Retention-{00000000}</displayFormat>
        <label>Retention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retentions</pluralLabel>
    <recordTypes>
        <fullName>AP_Retention</fullName>
        <active>true</active>
        <description>For use with AP Lines</description>
        <label>AP Retention</label>
    </recordTypes>
    <recordTypes>
        <fullName>Billing_Retention</fullName>
        <active>true</active>
        <description>For use with Billing Lines</description>
        <label>Billing Retention</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>